[package]
name = "calendar-as-diary"
version = "0.1.0"
authors = ["owen8877 <owentoget@yeah.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
google-calendar3 = "*"
# This project intentionally uses an old version of Hyper. See
# https://github.com/Byron/google-apis-rs/issues/173 for more
# information.
hyper = "^0.10"
hyper-rustls = "^0.6"
hyper-native-tls = "^0.3"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
serde_derive = "^1.0"
yup-oauth2 = "^1.0"
cmd_lib = "0.7.8"
chrono = "*"
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
scraper = "0.12.0"