[package]
name = "calendar-as-diary"
version = "0.1.0"
authors = ["owen8877 <owentoget@yeah.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "*"
env_logger = "*"
google-calendar3 = "^4.0"
# This project intentionally uses an old version of Hyper. See
# https://github.com/Byron/google-apis-rs/issues/173 for more
# information.
hyper = "^0.14"
hyper-native-tls = "^0.3"
hyper-rustls = "^0.23"
lazy_static = "1.4.0"
log = "*"
regex = "^1.0.0"
reqwest = { version = "^0.11", features = ["json"] }
scraper = "^0.13.0"
serde = { version = "^1.0", features = ["derive"] }
serde_derive = "^1.0"
serde_json = "^1.0"
tokio = { version = "^1.21", features = ["full"] }
yup-oauth2 = "^7.0"
